apd_detector_rust/build_final_error_v8_utf8.txt
**********************************************************************
** Visual Studio 2022 Developer Command Prompt v17.14.28
** Copyright (c) 2025 Microsoft Corporation
**********************************************************************
[vcvarsall.bat] Environment initialized for: 'x64'
cmd :    Compiling 
apd_detector v0.1.0 (C:\Magan
g_Alif\Trial\apd_detector_rus
t)
At line:1 char:1
+ cmd /c "call ""C:\Program 
Files\Microsoft Visual 
Studio\2022\Communit ...
+ ~~~~~~~~~~~~~~~~~~~~~~~~~~~
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
~~~~~~~~~~~~~
    + CategoryInfo           
   : NotSpecified: (   Comp  
  iling ap..._detector_rus   
 t):String) [], RemoteExc    
eption
    + FullyQualifiedErrorId  
   : NativeCommandError
 
warning: unused import: 
`std::path::PathBuf`
 --> src\main.rs:2:5
  |
2 | use std::path::PathBuf;
  |     ^^^^^^^^^^^^^^^^^^
  |
  = note: 
`#[warn(unused_imports)]` 
(part of `#[warn(unused)]`) 
on by default

warning: unused imports: 
`CV_32F` and `Size`
 --> src\utils.rs:1:40
  |
1 | use 
opencv::core::{Point, 
Scalar, Mat, Size, CV_32F};
  |                          
              ^^^^  ^^^^^^

error[E0599]: no method 
named `into_dyn` found for 
tuple `(&ort::value::Shape, 
&[f32])` in the current scope
  --> src\detector.rs:70:66
   |
70 |         let mut 
detections = self.parse_detec
tions(output_tensor.into_dyn(
), frame_height, 
frame_width)?;
   |                         
                             
            ^^^^^^^^
   |
help: there is a method 
`into` with a similar name
   |
70 -         let mut 
detections = self.parse_detec
tions(output_tensor.into_dyn(
), frame_height, 
frame_width)?;
70 +         let mut 
detections = self.parse_detec
tions(output_tensor.into(), 
frame_height, frame_width)?;
   |

For more information about 
this error, try `rustc 
--explain E0599`.
warning: `apd_detector` (bin 
"apd_detector") generated 2 
warnings
error: could not compile 
`apd_detector` (bin 
"apd_detector") due to 1 
previous error; 2 warnings 
emitted
